fix horizons text exporter add stats for suits and weapons fix notification playing before initialization finishes